Updated README and reddit.py

--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # PRAW Credentials
+# Replace with yours below
 
 # Personal use script (14 characters)
-client_id="YOUR_14_CHAR_HERE"
+client_id="YourClientIDHere"
 
 # Secret key (27 characters)
-client_secret="YOUR_27_CHAR_HERE"
+client_secret="YourClientSecretHere"
 
 # App name
-user_agent="YOUR_APP_NAME_HERE"
+user_agent="YourAppNameHere"
