Added more detail to docstrings.

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # PRAW Credentials
 # Replace with yours below
+# If you do not know how to obtain a Reddit Developer Key see the README.md to learn how
 
 # Personal use script (14 characters)
 client_id="YourClientIDHere"
