--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
-certifi==2022.9.24
+certifi==2022.12.7
 charset-normalizer==2.1.1
-colorama==0.4.5
+colorama==0.4.6
 commonmark==0.9.1
+distlib==0.3.6
+filelock==3.9.0
 idna==3.4
-numpy==1.23.3
-pandas==1.5.0
-praw==7.6.0
+markdown-it-py==2.1.0
+mdurl==0.1.2
+numpy==1.24.1
+pandas==1.5.3
+pipenv==2022.12.19
+platformdirs==2.6.2
+praw==7.6.1
 prawcore==2.3.0
-Pygments==2.13.0
+Pygments==2.14.0
 python-dateutil==2.8.2
-python-dotenv==0.21.0
-pytz==2022.4
-requests==2.28.1
-rich==12.6.0
+python-dotenv==0.21.1
+pytz==2022.7.1
+requests==2.28.2
+rich==13.2.0
 six==1.16.0
 tqdm==4.64.1
 update-checker==0.18.0
-urllib3==1.26.12
-websocket-client==1.4.1
-XlsxWriter==3.0.3
+urllib3==1.26.14
+virtualenv==20.17.1
+virtualenv-clone==0.5.7
+websocket-client==1.5.0
+XlsxWriter==3.0.7
